# CC-RLM

./: .env.example  CLAUDE.md  Dockerfile.ccr  Dockerfile.rlm  LICENSE  README.md  docker-compose.vllm.yml  docker-compose.yml  exec-summary.md  post.md  pyproject.toml  spec.md
.claude/: settings.json
.claude/hooks/: inject_repo_context.py  pre_tool_use.py  track_tool_reads.py
ccr/: CLAUDE.md  config.py  main.py  router.py
rlm/: bm25.py  cache.py  config.py  context_pack.py  main.py  relevance_store.py  repo_index.py  session.py  store.py  watcher.py  workspace.py
rlm/walkers/: ts_imports.py
tests/eval/: README.md  cases.json  run_eval.py
